# CancerPrediction

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
analysis/: 01_data_exploration.ipynb  02_target_investigation.ipynb
helper/: functions.py
