[project]
name = "cancerprediction"
version = "0.1.0"
description = "Learning and development environment working on the breast cancer dataset from Kaggle."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "pytest>=9.0.2",
    "pre-commit>=4.5.0",
]
